# bookmark-pdf

./: .gitignore  CHANGELOG.md  README.md  bookmark_pdf.spec  pyproject.toml  requirements-dev.txt  requirements.txt
bookmark_pdf/: __main__.py  app.py  bookmark.py  fetcher.py  parser.py  py.typed  transforms.py
docs/: RELEASE-v1.5.0.md  USER_MANUAL.md  plan.md  proposal-bookmark-text-area.md  proposal-bookmark-tools.md  proposal-save-after-fetch.md  spec.md  tasks.md
examples/: sample_bookmarks.md  sample_bookmarks.txt
packaging/: README.md  bookmark_pdf.spec  build.sh  icon.icns
src/: __init__.py  __main__.py  app.py  bookmark.py  parser.py
tests/: test_bookmark.py  test_e2e.py  test_fetcher.py  test_filename_utils.py  test_parser.py  test_read_bookmarks.py  test_save_txt.py  test_serializer.py  test_transforms.py
tests/fixtures/: md_header_comment.md  md_header_suffix.md  md_toc_link.md  txt_chapter.txt  txt_flat.txt  txt_indent.txt
