[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmark-pdf"
version = "1.4.0"
description = "TXT/MD 书签挂载到 PDF · Tkinter GUI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Yeweii" },
]
keywords = ["pdf", "bookmark", "outline", "markdown", "tkinter", "pypdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

dependencies = [
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "reportlab>=4.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
bookmark-pdf = "bookmark_pdf.__main__:main"

[project.urls]
Homepage = "https://github.com/Yeweii/bookmark-pdf"
Repository = "https://github.com/Yeweii/bookmark-pdf"
Issues = "https://github.com/Yeweii/bookmark-pdf/issues"

[tool.setuptools]
packages = ["bookmark_pdf"]
include-package-data = true

[tool.setuptools.package-data]
bookmark_pdf = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

# Build standalone executable (macOS):
#   pyinstaller --clean bookmark_pdf.spec
# Output: dist/BookmarkPDF.app